fixed contact button spacing

--- a/styles.css
+++ b/styles.css
@@ -114,17 +114,21 @@ body.gold .header > div.mid-spot {
 }
 
 button.contact-btn {
-    position: absolute; left: min(46em, 60vw); right: 0; margin: 0 auto;
+    position: absolute; 
+    left: min(29em, 60vw); 
+    right: 0;
+    top: 19px;
+    margin: 0 auto;
     width: 8em; height: 2.4em;
     cursor: pointer;
     border-radius: 20em;
     border: none;
     transition: background 0.5s, transform 0.5s;
-    top: 19px;
 
     background: #121521;
     color: #9dc3f7;
     white-space:nowrap;
+
 }
 button.contact-btn::before {
     content: ''; display: block; position:absolute; left: 0; top:0; border-radius: 20em;
